--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,15 +14,33 @@
                         background-size: cover;
                         background-position: 50% 50%;
                         .container {
-                            position: relative;
                             .project {
-                                position: absolute;
-                                top: 40px;
-                                left: 15px;
+                                margin-top: 40px;
+                                margin-left: 15px;
                                 width: 400px;
                                 height: 350px;
                                 padding-left: 40px;
                                 background-color:rgba(0, 0, 0, 0.8);
+                                @media (max-width: $xs) {
+                                    margin: 0 auto !important;
+                                    margin-top: 58px !important;
+                                    width: 279px !important;
+                                }
+                                @media (max-width: $sm) {
+//                                    margin-top: 0px;
+//                                    margin-left: 0px;
+//                                    width: 279px !important;
+                                }
+                                @media (max-width: $md) {
+                                    width: 336px;
+                                    margin-top: 75px;
+                                    margin-left: 22px;
+                                }
+                                @media (max-width: $lg) {
+                                    margin-top: 75px;
+                                    margin-left: 22px;
+                                }
+
                                 h2 {
                                     font-size: 18px;
                                     color: #fff;
@@ -206,9 +224,7 @@
                 a {
                     position: relative;
                     display: block;
-                    width: 570px;
                     height: 250px;
-
                     .hover-details {
                         display: none;
                         position: absolute;
@@ -448,8 +464,8 @@
     }
     .the-terrace {
         ul {
+            margin: 0;
             li {
-                width: 50%;
                 height: 470px;
                 &:nth-of-type(1) {
                     background-image: url(/assets/images/main/the_terrace_bg.jpg);
@@ -458,38 +474,40 @@
                     background-position: 50% 50%;
                 }
                 &:nth-of-type(2) {
-                    position: relative;
-                    padding: 110px 87px 0 87px;
                     background-color: #282c47;
-                    h3 {
-                        font-size: 35px;
-                        color: #fff;
-                        font-weight: bold;
-                        letter-spacing: -3px;
-                    }
-                    hr {
-                        width: 53px;
-                        border-top: 2px solid #fff;
-                        display: block;
-                        margin: 25px 0 30px 0;
-                    }
-                    p {
-                        font-size: 16px;
-                        color: #fff;
-                        line-height: 25px;
-                        letter-spacing: -2px;
-                    }
-                    .more-btn {
-                        margin-top: 40px;
-                        .btn {
-                            width: 150px;
-                            height: 50px;
+                    div {
+                        position: relative;
+                        padding: 110px 87px 0 87px;
+                        h3 {
+                            font-size: 35px;
+                            color: #fff;
+                            font-weight: bold;
+                            letter-spacing: -3px;
+                        }
+                        hr {
+                            width: 53px;
+                            border-top: 2px solid #fff;
+                            display: block;
+                            margin: 25px 0 30px 0;
+                        }
+                        p {
                             font-size: 16px;
                             color: #fff;
-                            text-align: center;
-                            padding: 12px 0;
-                            border-radius: 0;
-                            border: 1px solid #fff;
+                            line-height: 25px;
+                            letter-spacing: -2px;
+                        }
+                        .more-btn {
+                            margin-top: 40px;
+                            .btn {
+                                width: 150px;
+                                height: 50px;
+                                font-size: 16px;
+                                color: #fff;
+                                text-align: center;
+                                padding: 13px 0;
+                                border-radius: 0;
+                                border: 1px solid #fff;
+                            }
                         }
                     }
                 }
