--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -1,8 +1,10 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:300,400,700';
 
+$xs: 320px;
 $sm: 768px;
 $md: 992px;
 $lg: 1200px;
+
 
 $rc: #d90c1c;
 
