--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1,24 +1,15 @@
 @import 'common';
 @import 'https://fonts.googleapis.com/css?family=Noto+Sans:400,700';
 
-body {
-    font-family: 'Noto Sans CJK KR', sans-serif;
-    min-width: 1200px;
-}
 html {
-    min-width: 992px;
+    min-width: 320px;
 }
 body {
-    min-width: 1200px;
+    min-width: 320px;
     color: #666;
     font-size: 13px;
     font-weight: 300;
-    @media (max-width: $md - 1px){
-        min-width: 768px;
-    }
-    @media (max-width: $sm - 1px){
-        min-width: 320px;
-    }
+    font-family: 'Noto Sans CJK KR', sans-serif;
 }
 a {
     color: #666;
@@ -53,7 +44,7 @@ label {
 }
 .container,
 .container-fluid {
-    width: 1200px;
+    max-width: 1200px;
     padding-left: 10px;
     padding-right: 10px;
     .row {
@@ -136,6 +127,15 @@ select.form-control {
     position: relative;
     height: 127px;
     z-index: 1;
+    @media (max-width: $xs - 1px){
+        height: 55px;
+    }
+    @media (max-width: $md - 1px){
+        height: 55px;
+    }
+    @media (max-width: $lg - 1px){
+        height: 55px;
+    }
     .top-menu {
         text-align: right;
         border-bottom: 1px solid #e5e5e5;
@@ -182,6 +182,26 @@ select.form-control {
         height: 91px;
         overflow: hidden;
         background-color: #fff;
+        @media (max-width: $xs - 1px){
+            position: absolute;
+            top: 0;
+            height: 55px;
+        }
+        @media (max-width: $sm - 1px){
+            position: absolute;
+            top: 0;
+            height: 55px;
+        }
+        @media (max-width: $md - 1px){
+            position: absolute;
+            top: 0;
+            height: 55px;
+        }
+        @media (max-width: $lg - 1px){
+            position: absolute;
+            top: 0;
+            height: 55px;
+        }
         &.opened {
             height: auto;
             .wrapper {
@@ -200,14 +220,60 @@ select.form-control {
             height: 91px;
             border-bottom: 3px solid $rc;
             background-color: #fff;
+            @media (max-width: $xs){
+                height: 55px;
+            }
+            @media (max-width: $md){
+                height: 55px;
+            }
+            @media (max-width: $lg){
+                height: 55px;
+            }
             .container {
                 position: relative;
                 .main-logo {
-                    position: absolute;
-                    top: 24px;
-                    left: 15px;
+                    float: left;
+                    margin-top: 24px;
+                    @media (max-width: $xs){
+                        float: left;
+                        marin-left: 10px;
+                        margin-top: 14px;
+                    }
+                    @media (max-width: $sm){
+                        float: left;
+                        marin-left: 22px;
+                        margin-top: 14px;
+                    }
+                    @media (max-width: $md){
+                        float: left;
+                        marin-left: 22px;
+                        margin-top: 14px;
+                    }
+                    @media (max-width: $lg){
+                        float: left;
+                        marin-left: 22px;
+                        margin-top: 14px;
+                    }
                 }
-                > ul {
+                .md-menu {
+                    float: right;
+                    text-align: right;
+                    margin-top: 16px;
+                    padding: 0;
+                    .btn-menu {
+                        background-color: #fff;
+                        padding: 0;
+                        .bar {
+                            width: 22px;
+                            height: 15px;
+                            display: block;
+                            background-image: url(/assets/images/main/bar_btn.png);
+                            background-repeat: no-repeat;
+                            background-position: 0 0;
+                        }
+                    }
+                }
+                > .lg-menu {
                     float: right;
                     margin-left: -15px;
                     margin-right: -15px;
@@ -265,114 +331,111 @@ select.form-control {
 }
 /* Footer */
 #footer {
-    overflow: hidden;
     background-color: #1f1f1f;
-    .introduce {
-        float: left;
-        width: 877px;
-        margin: 50px 0;
-        border-right: 1px solid #2f2f2f;
-        > ul {
-            > li {
-                display: inline-block;
-                width: 19.5%;
-                vertical-align: top;
-                h4 {
-                    margin-bottom: 20px;
-                    a {
-                        font-size: 15px;
-                        color: #d5d5d5;
-                        font-weight: 400;
-                        line-height: 30px;
-                    }
-                }
-                ul {
-                    li {
+    .foot-nav {
+        .introduce {
+            margin: 50px 0;
+            border-right: 1px solid #2f2f2f;
+            > ul {
+                > li {
+                    display: inline-block;
+                    width: 19.5%;
+                    vertical-align: top;
+                    h4 {
+                        margin-bottom: 20px;
                         a {
-                            font-size: 14px;
-                            color: #777;
+                            font-size: 15px;
+                            color: #d5d5d5;
                             font-weight: 400;
                             line-height: 30px;
+                        }
+                    }
+                    ul {
+                        li {
+                            a {
+                                font-size: 14px;
+                                color: #777;
+                                font-weight: 400;
+                                line-height: 30px;
+                            }
                         }
                     }
                 }
             }
         }
-    }
-    .company {
-        float: left;
-        width: 293px;
-        margin: 50px 0;
-        padding-left: 39px;
-        h2 {
-            padding-top: 17px;
-            padding-left: 27px;
-            margin-bottom: 32px;
-            a {
-                img {
-                    vertical-align: top;
-                }
-            }
-        }
-        dl {
-            line-height: 25px;
-            dt {
-                display: inline-block;
-                font-size: 13px;
-                color: #999;
-                font-weight: 400;
-                line-height: 25px;
-                &:after {
-                    content: ":";
-                }
-                &:nth-of-type(2) {
-                    margin-left: 7px;
-                }
-            }
-            dd {
-                display: inline-block;
-                font-size: 13px;
-                color: #999;
-                font-weight: 400;
-                line-height: 25px;
-                letter-spacing: -1px;
-            }
-        }
-        ul {
-            margin-top: 37px;
-            li {
-                display: inline-block;
-                &:after {
-                    content: "|";
-                    padding: 0 4px 0 10px;
-                }
-                &:last-child:after {
-                    content: "";
-                    padding: 0;
-                }
+        .company {
+            margin: 50px 0;
+            padding-left: 39px;
+            h2 {
+                padding-top: 17px;
+                padding-left: 27px;
+                margin-bottom: 32px;
                 a {
+                    img {
+                        vertical-align: top;
+                    }
+                }
+            }
+            dl {
+                line-height: 25px;
+                dt {
+                    display: inline-block;
                     font-size: 13px;
                     color: #999;
-                    letter-spacing: -1px;
                     font-weight: 400;
+                    line-height: 25px;
+                    &:after {
+                        content: ":";
+                    }
+                    &:nth-of-type(2) {
+                        margin-left: 7px;
+                    }
+                }
+                dd {
+                    display: inline-block;
+                    font-size: 13px;
+                    color: #999;
+                    font-weight: 400;
+                    line-height: 25px;
+                    letter-spacing: -1px;
+                }
+            }
+            ul {
+                margin-top: 37px;
+                li {
+                    display: inline-block;
+                    &:after {
+                        content: "|";
+                        padding: 0 4px 0 10px;
+                    }
+                    &:last-child:after {
+                        content: "";
+                        padding: 0;
+                    }
+                    a {
+                        font-size: 13px;
+                        color: #999;
+                        letter-spacing: -1px;
+                        font-weight: 400;
+                    }
                 }
             }
         }
     }
     .copyright {
         border-top: 1px solid #2e2e2e;
-        padding: 26px 0;
+        padding: 13px 0;
         p {
-            float: left;
             font-size: 13px;
             color: #999;
             text-align: left;
+            height: 40px;
+            line-height: 40px;
             a {
                 color: #999;
             }
         }
         .dropup {
-            float: right;
             .btn {
                 display: block;
                 width: 170px;
